# microservices/items_service/src/routes.ts
@@ -33,18 +33,35 @@ const models: TsoaRoute.Models = {
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "FindingProps": {
-        "dataType": "refAlias",
-        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"metadata":{"ref":"MetadataProps","required":true},"location":{"ref":"LocationProps","required":true},"ruleId":{"dataType":"string","required":true},"type":{"dataType":"string","required":true},"itemId":{"dataType":"string","required":true},"id":{"dataType":"string","required":true}},"validators":{}},
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "itemId": {"dataType":"double","required":true},
+            "type": {"dataType":"string","required":true},
+            "ruleId": {"dataType":"string","required":true},
+            "location": {"ref":"LocationProps","required":true},
+            "metadata": {"ref":"MetadataProps","required":true},
+        },
+        "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "ItemProps": {
-        "dataType": "refAlias",
-        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"finishedAt":{"dataType":"string"},"scanningAt":{"dataType":"string"},"queuedAt":{"dataType":"string","required":true},"findings":{"dataType":"array","array":{"dataType":"refAlias","ref":"FindingProps"},"required":true},"repositoryName":{"dataType":"string","required":true},"status":{"ref":"ItemStatus","required":true},"id":{"dataType":"string","required":true}},"validators":{}},
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "status": {"ref":"ItemStatus","required":true},
+            "repositoryName": {"dataType":"string","required":true},
+            "findings": {"dataType":"array","array":{"dataType":"refObject","ref":"FindingProps"},"required":true},
+            "queuedAt": {"dataType":"string","required":true},
+            "scanningAt": {"dataType":"string"},
+            "finishedAt": {"dataType":"string"},
+        },
+        "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "Pick_ItemProps.Exclude_keyofItemProps.id-or-findings__": {
         "dataType": "refAlias",
-        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"status":{"ref":"ItemStatus","required":true},"repositoryName":{"dataType":"string","required":true},"queuedAt":{"dataType":"string","required":true},"scanningAt":{"dataType":"string"},"finishedAt":{"dataType":"string"}},"validators":{}},
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{},"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "Omit_ItemProps.id-or-findings_": {
@@ -52,9 +69,19 @@ const models: TsoaRoute.Models = {
         "type": {"ref":"Pick_ItemProps.Exclude_keyofItemProps.id-or-findings__","validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "Partial_Pick_ItemProps.id-or-findings__": {
+        "dataType": "refAlias",
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{},"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "PartialBy_ItemProps.id-or-findings_": {
+        "dataType": "refAlias",
+        "type": {"dataType":"intersection","subSchemas":[{"ref":"Omit_ItemProps.id-or-findings_"},{"ref":"Partial_Pick_ItemProps.id-or-findings__"}],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "Pick_FindingProps.Exclude_keyofFindingProps.id__": {
         "dataType": "refAlias",
-        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"itemId":{"dataType":"string","required":true},"type":{"dataType":"string","required":true},"ruleId":{"dataType":"string","required":true},"location":{"ref":"LocationProps","required":true},"metadata":{"ref":"MetadataProps","required":true}},"validators":{}},
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{},"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "Omit_FindingProps.id_": {
@@ -62,14 +89,24 @@ const models: TsoaRoute.Models = {
         "type": {"ref":"Pick_FindingProps.Exclude_keyofFindingProps.id__","validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "Partial_Pick_FindingProps.id__": {
+        "dataType": "refAlias",
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{},"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "PartialBy_FindingProps.id_": {
+        "dataType": "refAlias",
+        "type": {"dataType":"intersection","subSchemas":[{"ref":"Omit_FindingProps.id_"},{"ref":"Partial_Pick_FindingProps.id__"}],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "FindingCreationParams": {
         "dataType": "refAlias",
-        "type": {"ref":"Omit_FindingProps.id_","validators":{}},
+        "type": {"ref":"PartialBy_FindingProps.id_","validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "ItemCreationParams": {
         "dataType": "refAlias",
-        "type": {"dataType":"intersection","subSchemas":[{"ref":"Omit_ItemProps.id-or-findings_"},{"dataType":"nestedObjectLiteral","nestedProperties":{"findings":{"dataType":"array","array":{"dataType":"refAlias","ref":"FindingCreationParams"}}}}],"validators":{}},
+        "type": {"dataType":"intersection","subSchemas":[{"ref":"PartialBy_ItemProps.id-or-findings_"},{"dataType":"nestedObjectLiteral","nestedProperties":{"findings":{"dataType":"array","array":{"dataType":"refAlias","ref":"FindingCreationParams"}}}}],"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 };
