# packages/items_service_client/docs/openapi.yaml
@@ -48,57 +48,42 @@ components:
             type: object
         FindingProps:
             properties:
-                metadata:
-                    $ref: '#/components/schemas/MetadataProps'
-                location:
-                    $ref: '#/components/schemas/LocationProps'
-                ruleId:
-                    type: string
+                id:
+                    type: number
+                    format: double
+                itemId:
+                    type: number
+                    format: double
                 type:
                     type: string
-                itemId:
+                ruleId:
                     type: string
-                id:
-                    type: string
+                location:
+                    $ref: '#/components/schemas/LocationProps'
+                metadata:
+                    $ref: '#/components/schemas/MetadataProps'
             required:
-                - metadata
-                - location
-                - ruleId
-                - type
-                - itemId
                 - id
+                - itemId
+                - type
+                - ruleId
+                - location
+                - metadata
             type: object
+            additionalProperties: false
         ItemProps:
             properties:
-                finishedAt:
-                    type: string
-                scanningAt:
-                    type: string
-                queuedAt:
+                id:
+                    type: number
+                    format: double
+                status:
+                    $ref: '#/components/schemas/ItemStatus'
+                repositoryName:
                     type: string
                 findings:
                     items:
                         $ref: '#/components/schemas/FindingProps'
                     type: array
-                repositoryName:
-                    type: string
-                status:
-                    $ref: '#/components/schemas/ItemStatus'
-                id:
-                    type: string
-            required:
-                - queuedAt
-                - findings
-                - repositoryName
-                - status
-                - id
-            type: object
-        Pick_ItemProps.Exclude_keyofItemProps.id-or-findings__:
-            properties:
-                status:
-                    $ref: '#/components/schemas/ItemStatus'
-                repositoryName:
-                    type: string
                 queuedAt:
                     type: string
                 scanningAt:
@@ -106,43 +91,51 @@ components:
                 finishedAt:
                     type: string
             required:
+                - id
                 - status
                 - repositoryName
+                - findings
                 - queuedAt
+            type: object
+            additionalProperties: false
+        Pick_ItemProps.Exclude_keyofItemProps.id-or-findings__:
+            properties: {}
             type: object
             description: 'From T, pick a set of properties whose keys are in the union K'
         Omit_ItemProps.id-or-findings_:
             $ref: '#/components/schemas/Pick_ItemProps.Exclude_keyofItemProps.id-or-findings__'
-            description: 'Construct a type with the properties of T except for those in type K.'
+        Partial_Pick_ItemProps.id-or-findings__:
+            properties: {}
+            type: object
+            description: 'Make all properties in T optional'
+        PartialBy_ItemProps.id-or-findings_:
+            allOf:
+                -
+                    $ref: '#/components/schemas/Omit_ItemProps.id-or-findings_'
+                -
+                    $ref: '#/components/schemas/Partial_Pick_ItemProps.id-or-findings__'
         Pick_FindingProps.Exclude_keyofFindingProps.id__:
-            properties:
-                itemId:
-                    type: string
-                type:
-                    type: string
-                ruleId:
-                    type: string
-                location:
-                    $ref: '#/components/schemas/LocationProps'
-                metadata:
-                    $ref: '#/components/schemas/MetadataProps'
-            required:
-                - itemId
-                - type
-                - ruleId
-                - location
-                - metadata
+            properties: {}
             type: object
             description: 'From T, pick a set of properties whose keys are in the union K'
         Omit_FindingProps.id_:
             $ref: '#/components/schemas/Pick_FindingProps.Exclude_keyofFindingProps.id__'
-            description: 'Construct a type with the properties of T except for those in type K.'
+        Partial_Pick_FindingProps.id__:
+            properties: {}
+            type: object
+            description: 'Make all properties in T optional'
+        PartialBy_FindingProps.id_:
+            allOf:
+                -
+                    $ref: '#/components/schemas/Omit_FindingProps.id_'
+                -
+                    $ref: '#/components/schemas/Partial_Pick_FindingProps.id__'
         FindingCreationParams:
-            $ref: '#/components/schemas/Omit_FindingProps.id_'
+            $ref: '#/components/schemas/PartialBy_FindingProps.id_'
         ItemCreationParams:
             allOf:
                 -
-                    $ref: '#/components/schemas/Omit_ItemProps.id-or-findings_'
+                    $ref: '#/components/schemas/PartialBy_ItemProps.id-or-findings_'
                 -
                     properties:
                         findings:
